[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-substrate"
version = "0.1.1"
description = "SUBSTRATE cognitive memory integration for LangChain and LangGraph"
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.10"
authors = [
    { name = "Garmo Labs", email = "hello@garmolabs.com" },
]
keywords = ["langchain", "langgraph", "substrate", "memory", "ai", "cognitive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.22",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://garmolabs.com"
Documentation = "https://substrate-engine.fly.dev/docs"
Repository = "https://github.com/PKaldone/SUBSTRATE"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_substrate"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests",
]
